crates/varyk/tests/snapshots/codegen__interop_main_rs.snap
---
source: crates/varyk/tests/codegen.rs
expression: "file(&krate, \"src/main.rs\")"
---
mod greet;

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let name = "Varyk";
    ::std::println!("{}", crate::greet::hello(name));
}
