crates/varyk/tests/snapshots/codegen__let_from_a_field.snap
---
source: crates/varyk/tests/codegen.rs
expression: "main_rs(\"struct User {\\n    name: string,\\n}\\n\\nfn show(user: User) {\\n    let n = user.name;\\n    println!(\\\"{}\\\", n);\\n}\\n\\nfn main() {\\n    let user = User { name: \\\"Ann\\\" };\\n    let n = user.name;\\n    println!(\\\"{}\\\", n);\\n    show(user);\\n}\\n\")"
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
struct User {
    name: String,
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn show(user: &User) {
    let n = &user.name;
    ::std::println!("{}", n);
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let user = User { name: "Ann".to_string() };
    let n = &user.name;
    ::std::println!("{}", n);
    show(&user);
}
