crates/varyk/tests/snapshots/codegen__let_whose_branches_mix_a_field_and_a_str_local.snap
---
source: crates/varyk/tests/codegen.rs
expression: "main_rs(\"struct User {\\n    name: string,\\n}\\n\\nfn main() {\\n    let user = User { name: \\\"Ann\\\" };\\n    let other = \\\"Bob\\\";\\n    let n = if true {\\n        user.name\\n    } else {\\n        other\\n    };\\n    println!(\\\"{}\\\", n);\\n}\\n\")"
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
#[derive(Clone, PartialEq)]
struct User {
    name: String,
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let user = User { name: "Ann".to_string() };
    let other = "Bob";
    let n = if true {
        user.name.as_str()
    } else {
        other
    };
    ::std::println!("{}", n);
}
