crates/varyk/tests/snapshots/codegen__literal_into_field_field_assignment_and_return.snap
---
source: crates/varyk/tests/codegen.rs
expression: "main_rs(\"struct Label {\\n    text: string,\\n}\\n\\nfn tail() -> string {\\n    \\\"tail\\\"\\n}\\n\\nfn early(flag: bool) -> string {\\n    if flag {\\n        return \\\"early\\\";\\n    }\\n    \\\"late\\\"\\n}\\n\\nfn relabel(mut label: Label) {\\n    label.text = \\\"b\\\";\\n}\\n\\nfn main() {\\n    let mut label = Label { text: \\\"a\\\" };\\n    relabel(label);\\n    label.text = \\\"c\\\";\\n    println!(\\\"{} {} {}\\\", label.text, tail(), early(true));\\n}\\n\")"
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
struct Label {
    text: String,
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn tail() -> String {
    "tail".to_string()
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn early(flag: bool) -> String {
    if flag {
        return "early".to_string();
    }
    "late".to_string()
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn relabel(label: &mut Label) {
    label.text = "b".to_string();
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let mut label = Label { text: "a".to_string() };
    relabel(&mut label);
    label.text = "c".to_string();
    ::std::println!("{} {} {}", label.text, tail(), early(true));
}
