crates/varyk/tests/snapshots/codegen__literal_let_that_stays_borrowed.snap
---
source: crates/varyk/tests/codegen.rs
expression: "main_rs(\"fn main() {\\n    let s = \\\"x\\\";\\n    println!(\\\"{}\\\", s);\\n}\\n\")"
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let s = "x";
    ::std::println!("{}", s);
}
