crates/varyk/tests/snapshots/codegen__literal_text_to_a_static_str_parameter.snap
---
source: crates/varyk/tests/codegen.rs
expression: "file(&krate, \"src/main.rs\")"
---
mod ext;

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let db = crate::ext::Db::open();
    ::std::println!("{}", crate::ext::Db::one(&db, "a \"b\" c"));
    ::std::println!("{}", crate::ext::count("select 1"));
}
