crates/varyk/tests/snapshots/codegen__loops_main_rs.snap
---
source: crates/varyk/tests/codegen.rs
expression: main
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
#[derive(Clone, PartialEq)]
struct Task {
    title: String,
    done: bool,
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
#[derive(Clone, PartialEq)]
struct Board {
    tasks: Vec<Task>,
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
impl Board {
    fn open_count(&self) -> i32 {
        let mut count = 0;
        for t in &self.tasks {
            if !t.done {
                count = count + 1;
            }
        }
        count
    }
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn make_tasks() -> Vec<Task> {
    ::std::vec![Task { title: "write".to_string(), done: false }, Task { title: "test".to_string(), done: true }]
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn titles(tasks: &Vec<Task>) {
    for t in tasks {
        ::std::println!("{}", t.title);
    }
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn finish_all(tasks: &mut Vec<Task>) -> i32 {
    let mut open = 0;
    for t in &*tasks {
        if t.done {
            continue;
        }
        open = open + 1;
    }
    for i in 0usize..tasks.len() {
        tasks[i].done = true;
    }
    open
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn sum(values: &Vec<i32>) -> i32 {
    let mut total = 0;
    for value in values {
        let value = *value;
        total = total + value;
    }
    total
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn words() -> Vec<String> {
    ::std::vec!["alpha".to_string(), "beta".to_string()]
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn shout(word: &str) {
    ::std::println!("{}!", word);
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let numbers: Vec<i32> = ::std::vec![3, 4, 5];
    let mut total = 0;
    for n in &numbers {
        let n = *n;
        if n == 5 {
            break;
        }
        total = total + n;
    }
    ::std::println!("{} {}", total, sum(&numbers));
    for i in 0..3 {
        ::std::println!("{}", i);
    }
    let mut tasks: Vec<Task> = make_tasks();
    titles(&tasks);
    ::std::println!("{} open, then {}", finish_all(&mut tasks), finish_all(&mut tasks));
    let board = Board { tasks: make_tasks() };
    ::std::println!("{}", Board::open_count(&board));
    let names: Vec<String> = words();
    for name in &names {
        shout(name);
    }
    for word in words() {
        shout(&word);
    }
    let mut kept: Vec<Task> = Vec::new();
    for t in make_tasks() {
        kept.push(t);
    }
    ::std::println!("{}", kept.len());
}
